hotfix: review 통계 조회시 error handling 추가